--- a/assets/css/scss/_custom.scss
+++ b/assets/css/scss/_custom.scss
@@ -447,7 +447,7 @@ span.title {
     border-bottom: 1px solid #D6D6D6;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .mobile-full-screen {
     padding: 0;
     padding-bottom: 10px;
@@ -456,9 +456,9 @@ span.title {
     padding-top: 10px;
   }
   .fullsize {
-    bottom: 13px;
+    bottom: 12px;
     .main-btn{
-      padding: 8px 20px;
+      padding: 7px 20px;
     }
   }
   .imageBig .pagination ul li a {
@@ -469,6 +469,15 @@ span.title {
   }
   .full-screen-toggle {
     height: calc(100vh - 56px);
+  }
+  .imageBig .pagination ul li.coloured:first-child a {
+    padding-right: 0;
+  }
+  .imageBig .pagination ul li.coloured:last-child a {
+    padding-left: 0;
+  }
+  .imageBig .pagination ul li a {
+    min-width: 35px;
   }
 }
 .d-flex {
@@ -515,17 +524,6 @@ span.title {
     @media (max-width: 768px) {
       width: 100px;
     }
-  }
-}
-
-.fullscreen-btn {
-  position: absolute;
-  left: 10px;
-  top: 10px;
-  display: none;
-  img {
-    width: 15px;
-    border-radius: 0;
   }
 }
 
